Workflows now build with release optimizations

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: x86_64-pc-windows-gnu
+          target: x86_64-pc-windows-msvc
           override: true
       - uses: actions-rs/cargo@v1
         with:
           use-cross: true
           command: build
-          args: --target x86_64-pc-windows-gnu
+          args: --release --all-features --target x86_64-pc-windows-msvc
