--- a/.github/workflows/armv7.yml
+++ b/.github/workflows/armv7.yml
@@ -17,4 +17,4 @@ jobs:
         with:
           use-cross: true
           command: build
-          args: --target armv7-unknown-linux-gnueabihf
+          args: --release --all-features --target armv7-unknown-linux-gnueabihf
