--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -17,4 +17,4 @@ jobs:
         with:
           use-cross: true
           command: build
-          args: --target x86_64-apple-darwin
+          args: --release --all-features --target x86_64-apple-darwin
