--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -17,4 +17,4 @@ jobs:
         with:
           use-cross: true
           command: build
-          args: --target x86_64-unknown-linux-gnu
+          args: --release --all-features --target x86_64-unknown-linux-gnu
