--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -7,14 +7,28 @@ jobs:
     name: macOS (x86_64)
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - name: Checkout codebase
+        uses: actions/checkout@v2
+      - name: Setup Rust toolchain
+        uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
           target: x86_64-apple-darwin
           override: true
-      - uses: actions-rs/cargo@v1
+          components: rust-src
+      - name: Build Dokkoo
+        uses: actions-rs/cargo@v1
         with:
           use-cross: true
           command: build
-          args: --release --all-features --target x86_64-apple-darwin
+          args: -Z build-std strip=symbols --release --all-features --target x86_64-apple-darwin
+      - name: Prepare Dokkoo build artifact for upload
+        run: |
+          chmod +x target/release/dokkoo
+          strip -v target/release/dokkoo
+          tar -cvf x86_64-dokkoo.osx.tar target/release/dokkoo
+      - name: Upload Dokkoo build artifact to GitHub
+        uses: actions/upload-artifact@v2
+        with:
+          name: x86_64-dokkoo.osx
+          path: x86_64-dokkoo.osx.tar
