--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -7,14 +7,23 @@ jobs:
     name: Windows (x86_64)
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - name: Checkout codebase
+        uses: actions/checkout@v2
+      - name: Setup Rust toolchain
+        uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
           target: x86_64-pc-windows-msvc
           override: true
-      - uses: actions-rs/cargo@v1
+          components: rust-src
+      - name: Build Dokkoo
+        uses: actions-rs/cargo@v1
         with:
           use-cross: true
           command: build
-          args: --release --all-features --target x86_64-pc-windows-msvc
+          args: -Z build-std strip=symbols --release --all-features --target x86_64-pc-windows-msvc
+      - name: Upload Dokkoo build artifact to GitHub
+        uses: actions/upload-artifact@v2
+        with:
+          name: x86_64-dokkoo.win32
+          path: target/release/dokkoo
