--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ clap = { version = "3.0.0-beta.2", features = ["yaml", "wrap_help"] }
 liquid = "*"
 serde = "*"
 serde_yaml = "*"
+
+[profile.release]
+codegen-units = 1
+lto = true
+panic = 'abort'
