--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           use-cross: true
           command: build
-          args: -Z build-std strip=symbols --release --all-features --target x86_64-unknown-linux-gnu
+          args: -Z build-std -Z strip=symbols --release --all-features --target x86_64-unknown-linux-gnu
       - name: Prepare Dokkoo build artifact for upload
         run: |
           chmod +x target/release/dokkoo
