--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -24,6 +24,8 @@ jobs:
           args: --release --all-features --target x86_64-unknown-linux-gnu
       - name: Prepare Dokkoo build artifact for upload
         run: |
+          ls
+          ls ./target/release
           strip -v --strip-all target/release/dokkoo
           chmod +x target/release/dokkoo
           tar -cvf x86_64-dokkoo.gnu+linux.tar target/release/dokkoo
