Workflows: Set paths as explicitly relative

--- a/.github/workflows/armv7.yml
+++ b/.github/workflows/armv7.yml
@@ -24,9 +24,9 @@ jobs:
           args: --release --all-features --target armv7-unknown-linux-gnueabihf
       - name: Prepare Dokkoo build artifact for upload
         run: |
-          strip -v --strip-all target/release/dokkoo
-          chmod +x target/release/dokkoo
-          tar -cvf armv7-dokkoo.gnu+linux.tar target/release/dokkoo
+          strip -v --strip-all ./target/release/dokkoo
+          chmod +x ./target/release/dokkoo
+          tar -cvf armv7-dokkoo.gnu+linux.tar ./target/release/dokkoo
       - name: Upload Dokkoo build artifact to GitHub
         uses: actions/upload-artifact@v2
         with:
