--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -26,4 +26,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: x86_64-dokkoo.win32
-          path: target/release/dokkoo
+          path: ./target/release/dokkoo
