Workflows: Change path to Dokkoo binary

--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -24,10 +24,9 @@ jobs:
           args: --release --all-features --target x86_64-unknown-linux-gnu
       - name: Prepare Dokkoo build artifact for upload
         run: |
-          ls ./target/x86_64-unknown-linux-gnu/release
-          strip -v --strip-all ./target/release/dokkoo
-          chmod +x ./target/release/dokkoo
-          tar -cvf x86_64-dokkoo.gnu+linux.tar ./target/release/dokkoo
+          strip -v --strip-all ./target/x86_64-unknown-linux-gnu/release/dokkoo
+          chmod +x ./target/x86_64-unknown-linux-gnu/release/dokkoo
+          tar -cvf x86_64-dokkoo.gnu+linux.tar ./target/x86_64-unknown-linux-gnu/release/dokkoo
       - name: Upload Dokkoo build artifact to GitHub
         uses: actions/upload-artifact@v2
         with:
