--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -24,9 +24,9 @@ jobs:
           args: --release --all-features --target x86_64-apple-darwin
       - name: Prepare Dokkoo build artifact for upload
         run: |
-          strip ./target/release/dokkoo
-          chmod +x ./target/release/dokkoo
-          tar -cvf x86_64-dokkoo.osx.tar ./target/release/dokkoo
+          strip ./target/x86_64-apple-darwin/release/dokkoo
+          chmod +x ./target/x86_64-apple-darwin/release/dokkoo
+          tar -cvf x86_64-dokkoo.osx.tar ./target/x86_64-apple-darwin/release/dokkoo
       - name: Upload Dokkoo build artifact to GitHub
         uses: actions/upload-artifact@v2
         with:
