Workflow (code format) - Do not throw an error if code is already formatted

--- a/.github/workflows/format_code.yml
+++ b/.github/workflows/format_code.yml
@@ -25,4 +25,4 @@ jobs:
           git config --global user.name 'Dokkoo'
           git config --global user.email 'MadeByEmil@users.noreply.github.com'
           git commit -am "Automatic Rust styleguide enforcement"
-          git push
+          git push || echo "Codebase already conforms to Rust styleguide"
