--- a/.github/workflows/format_code.yml
+++ b/.github/workflows/format_code.yml
@@ -24,5 +24,5 @@ jobs:
         run: |
           git config --global user.name 'Dokkoo'
           git config --global user.email 'MadeByEmil@users.noreply.github.com'
-          git commit -am "Automatic Rust styleguide enforcement"
-          git push || echo "Codebase already conforms to Rust styleguide"
+          git diff --quiet && git diff --staged --quiet || git commit -am "Automatic Rust styleguide enforcement"
+          git push
