Workflow (code lint) - Have nightly toolchain override stable

--- a/.github/workflows/lint_code.yml
+++ b/.github/workflows/lint_code.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
+          override: true
           components: rust-src, clippy, rustfmt
       - name: Correct code files
         uses: actions-rs/cargo@v1
