--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "dokkoo"
 version = "0.1.0"
 authors = ["Emil Sayahi <em@emsa.cf>"]
 edition = "2018"
+license = "AGPL-3.0-or-later"
+description = "Dokkoo is a Mokk (Macro Output Key Kit) implementation written in Rust."
+repository = "https://github.com/MadeByEmil/dokkoo"
+readme = "README"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
