--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,12 @@ serde_yaml = "*"
 codegen-units = 1
 lto = true
 panic = 'abort'
+
+[package.metadata.deb]
+section = "utility"
+priority = "optional"
+assets = [
+    ["target/release/dokkoo", "usr/bin/", "755"],
+    ["README", "usr/share/doc/dokkoo/README", "644"],
+    ["COPYING", "usr/share/doc/dokkoo/COPYING", "644"],
+]
