--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -21,6 +21,10 @@ jobs:
         with:
           command: install
           args: cargo-deb
+      - name: Prepare building & packaging environment
+        run: |
+          mkdir -p ./target/x86_64-unknown-linux-gnu/release
+          ln -s ./target/x86_64-unknown-linux-gnu/release ./target/release
       - name: Build & package Dokkoo
         uses: actions-rs/cargo@v1
         with:
@@ -30,4 +34,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: x86_64-dokkoo.deb.gnu+linux
-          path: ./target/x86_64-unknown-linux-gnu/debian/dokkoo_*_amd64.deb
+          path: ./target/debian/dokkoo_*_amd64.deb
