--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -23,6 +23,7 @@ jobs:
           args: cargo-deb
       - name: Prepare building & packaging environment
         run: |
+          mkdir -p ./target/release
           ln -s ./target/x86_64-unknown-linux-gnu/release ./target/release
       - name: Build & package Dokkoo
         uses: actions-rs/cargo@v1
