--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,24 @@
+#    This file is part of Dokkoo.
+#
+#    Dokkoo is free software: you can redistribute it and/or modify
+#    it under the terms of the GNU Affero General Public License as published by
+#    the Free Software Foundation, either version 3 of the License, or
+#    (at your option) any later version.
+#
+#    Dokkoo is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#    GNU Affero General Public License for more details.
+#
+#    You should have received a copy of the GNU Affero General Public License
+#    along with Dokkoo.  If not, see <https://www.gnu.org/licenses/>.
 [package]
 name = "dokkoo"
 version = "0.1.0"
 authors = ["Emil Sayahi <em@emsa.cf>"]
 edition = "2018"
 license = "AGPL-3.0-or-later"
-description = "Dokkoo is a Mokk (Macro Output Key Kit) implementation written in Rust."
+description = "Mokk (Macro Output Key Kit) implementation written in Rust."
 repository = "https://github.com/MadeByEmil/dokkoo"
 readme = "README"
 
