Workflows: Fail if expecting artifact, but none is found

--- a/.github/workflows/armv7.yml
+++ b/.github/workflows/armv7.yml
@@ -31,3 +31,4 @@ jobs:
         with:
           name: armv7-dokkoo.gnu+linux
           path: armv7-dokkoo.gnu+linux.tar
+          if-no-files-found: error
