--- a/.github/workflows/publish_crate.yml
+++ b/.github/workflows/publish_crate.yml
@@ -1,10 +1,10 @@
 on: [push]
 
-name: Publish Dokkoo
+name: 'Publish: crates.io'
 
 jobs:
   publish:
-    name: Publish Dokkoo
+    name: 'Publish: crates.io'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout codebase
@@ -27,3 +27,9 @@ jobs:
 #        uses: actions-rs/cargo@v1
 #        with:
 #          command: publish
+      - name: Upload Dokkoo crate to GitHub as build artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: x86_64-dokkoo.deb.gnu+linux
+          path: ./target/package/.dokkoo-*.crate
+          if-no-files-found: error
