--- a/src/cli.yaml
+++ b/src/cli.yaml
@@ -12,8 +12,7 @@
 #
 #    You should have received a copy of the GNU Affero General Public License
 #    along with Dokkoo.  If not, see <https://www.gnu.org/licenses/>.
-name: dokkoo
-version: "0.1.0"
+name: Dokkoo
 author: Emil Sayahi
 about: Dokkoo is a Mokk (Macro Output Key Kit) implementation written in Rust.
 subcommands:
