--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,9 @@ readme = "README"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "*"
+chrono = { version = "*", features = ["unstable-locales"] }
 clap = { version = "3.0.0-beta.2", features = ["yaml", "wrap_help"] }
-comrak = "0.9"
+comrak = "*"
 liquid = "*"
 liquid-core = "*"
 liquid-lib = { version = "*", features = ["jekyll", "shopify", "extra"] }
