Continuing initial work on build process * Started work on CLI build functionality * Handled some unwrapping with match statements * Resolved frontmatter-splitting returning Strings on single line * New attempt at recursively rendering layouts * Added some 'TODO' items

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ readme = "README"
 chrono = { version = "*", features = ["unstable-locales"] }
 clap = { version = "3.0.0-beta.2", features = ["yaml", "wrap_help"] }
 comrak = "*"
+glob = "*"
 liquid = "*"
 liquid-core = "*"
 liquid-lib = { version = "*", features = ["jekyll", "shopify", "extra"] }
