--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ glob = "*"
 liquid = "*"
 liquid-core = "*"
 liquid-lib = { version = "*", features = ["stdlib", "jekyll", "shopify", "extra"] }
+pathdiff = "*"
 serde = "*"
 serde_yaml = "*"
 spinners = "*"
