--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,9 @@ spinners = "*"
 
 [profile.release]
 codegen-units = 1
+opt-level = 3
 lto = true
+debug = 0
 panic = 'abort'
 
 [package.metadata.deb]
