Added stopwatch to building, and now correctly ignoring '/layouts' and '/snippets'

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ pulldown-cmark = { version = "*", default-features = false, features = ["simd"] 
 serde = "*"
 serde_yaml = "*"
 spinners = "*"
+stopwatch = "*"
 
 [profile.release]
 codegen-units = 1
