--- a/.github/workflows/rpm.yml
+++ b/.github/workflows/rpm.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install compiler toolchain
         run: |
-          sudo yum -y install gcc
+          sudo yum -y install gcc rpm-build
       - name: Setup Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
