AUR workflow: continued work

--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -52,13 +52,10 @@ jobs:
             IdentityFile ~/.ssh/aur
             User aur
           EOT
-          
-          ls ~/.ssh
       - name: Push to AUR
         run: |
-          mkdir ./aur
-          cd ./aur
           yes | git clone ssh://aur@aur.archlinux.org/dokkoo-bin.git
+          cd ./dokkoo-bin
           cp -avf ../dokkoo-*-x86_64.tar.gz
           cp -avf ../PKGBUILD
           makepkg --printsrcinfo > .SRCINFO
