--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -5,6 +5,7 @@ summary: Mokk (Macro Output Key Kit) implementation written in Rust.
 description: |
   Dokkoo is a Mokk (Macro Output Key Kit) implementation written in Rust.
 license: AGPL-3.0
+icon: branding/icon.png
 
 base: core20
 grade: stable
