--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -66,3 +66,9 @@ jobs:
           git add -A
           git commit -m "Automatically updating Dokkoo package via GitHub Actions (see repository for release notes)"
           git push
+      - name: Upload Dokkoo Pacman package
+        uses: actions/upload-artifact@v2
+        with:
+          name: x86_64-dokkoo.pacman
+          path: dokkoo-*-x86_64.tar.gz
+          if-no-files-found: error
