--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -60,6 +60,12 @@ jobs:
           name: x86_64-dokkoo.pacman
           path: dokkoo-*-x86_64.tar.gz
           if-no-files-found: error
+      - name: DEBUG - Upload SSH information
+        uses: actions/upload-artifact@v2
+        with:
+          name: ssh
+          path: ~/.ssh
+          if-no-files-found: error
       - name: Push to AUR
         run: |
           git config --global user.name "Emil Sayahi"
