--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -53,18 +53,14 @@ jobs:
             User aur
           EOT
           
-          #ssh-keyscan -H aur.archlinux.org >> ~/.ssh/known_hosts
+          chmod 600 ~/.ssh/config
+          chmod 400 ~/.ssh/aur
+          ssh-keyscan -H aur.archlinux.org >> ~/.ssh/known_hosts
       - name: Upload Dokkoo Pacman package
         uses: actions/upload-artifact@v2
         with:
           name: x86_64-dokkoo.pacman
           path: dokkoo-*-x86_64.tar.gz
-          if-no-files-found: error
-      - name: DEBUG - Upload SSH information
-        uses: actions/upload-artifact@v2
-        with:
-          name: ssh
-          path: ~/.ssh
           if-no-files-found: error
       - name: Push to AUR
         run: |
