--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -55,7 +55,7 @@ jobs:
           
           chmod 600 ~/.ssh/config
           chmod 400 ~/.ssh/aur
-          ssh-keyscan -H aur.archlinux.org >> ~/.ssh/known_hosts
+          ssh-keyscan -t rsa aur.archlinux.org >> ~/.ssh/known_hosts
       - name: Upload Dokkoo Pacman package
         uses: actions/upload-artifact@v2
         with:
