--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -66,7 +66,7 @@ jobs:
         run: |
           git config --global user.name "Emil Sayahi"
           git config --global user.email "limesayahi@gmail.com"
-          git clone ssh://aur@aur.archlinux.org/dokkoo-bin.git | yes
+          git clone ssh://aur@aur.archlinux.org/dokkoo-bin.git
           cd ./dokkoo-bin
           cp -avf ../dokkoo-*-x86_64.tar.gz
           cp -avf ../PKGBUILD
