AUR workflow: Ugh, just work!

--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -12,7 +12,7 @@ jobs:
         - /proc:/proc
         - /sys/fs/cgroup/systemd/actions_job:/sys/fs/cgroup/systemd/actions_job
         - /sys/fs/cgroup:/sys/fs/cgroup
-        - ~/.ssh/known_hosts:/root/.ssh/known_hosts
+        - /root/.ssh/known_hosts:/root/.ssh/known_hosts
       options: --privileged
     steps:
       - name: Checkout codebase
