--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,11 @@
 #    along with Dokkoo.  If not, see <https://www.gnu.org/licenses/>.
 [package]
 name = "dokkoo"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Emil Sayahi <limesayahi@gmail.com>"]
 edition = "2018"
 categories = ["command-line-utilities", "parser-implementations", "text-processing"]
-exclude = ["/.github/**/*", "/branding/**/*", "/.gitignore", "/.whitesource", "/azure-pipelines.yml", "/snapcraft.yaml"]
+exclude = ["/.github/**/*", "/branding/**/*", "/.gitignore", "/.whitesource", "/azure-pipelines.yml", "/snapcraft.yaml", "/TODO"]
 license = "AGPL-3.0-or-later"
 description = "Mokk (Macro Output Key Kit) implementation written in Rust."
 repository = "https://github.com/MadeByEmil/dokkoo"
