--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,15 @@ repository = "https://github.com/MadeByEmil/dokkoo"
 homepage = "https://github.com/MadeByEmil/dokkoo"
 readme = "README"
 
+[lib]
+name = "file"
+path = "src/lib.rs"
+
+[[bin]]
+name = "main"
+path = "src/main.rs"
+doc = false
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
