--- a/.github/workflows/armv7.yml
+++ b/.github/workflows/armv7.yml
@@ -22,11 +22,17 @@ jobs:
           use-cross: true
           command: build
           args: --release --all-features --target armv7-unknown-linux-gnueabihf
-      - name: Prepare Dokkoo build artifact for upload
+      - name: Prepare Dokkoo for upload
         run: |
+          strip -v --strip-all ./target/armv7-unknown-linux-gnueabihf/release/dokkoo
+          strip -v --strip-all ./target/armv7-unknown-linux-gnueabihf/release/libdokkoo.so
+          strip -v --strip-all ./target/armv7-unknown-linux-gnueabihf/release/libdokkoo.a
           chmod +x ./target/armv7-unknown-linux-gnueabihf/release/dokkoo
-          tar -cvf armv7-dokkoo.gnu+linux.tar ./target/armv7-unknown-linux-gnueabihf/release/dokkoo
-      - name: Upload Dokkoo build artifact to GitHub
+          tar -cvf armv7-dokkoo.gnu+linux.tar \
+          ./target/armv7-unknown-linux-gnueabihf/release/dokkoo \
+          ./target/armv7-unknown-linux-gnueabihf/release/libdokkoo.so \
+          ./target/armv7-unknown-linux-gnueabihf/release/libdokkoo.a
+      - name: Upload Dokkoo build artifacts to GitHub
         uses: actions/upload-artifact@v2
         with:
           name: armv7-dokkoo.gnu+linux
