--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -22,9 +22,15 @@ jobs:
           use-cross: true
           command: build
           args: --release --all-features --target x86_64-pc-windows-msvc
-      - name: Upload Dokkoo build artifact to GitHub
+      - name: Prepare Dokkoo for upload
+        run: |
+          tar -czvf x86_64-dokkoo.win32.zip \
+          ./target/x86_64-pc-windows-msvc/release/dokkoo.exe \
+          ./target/x86_64-pc-windows-msvc/release/libdokkoo.dll \
+          ./target/x86_64-pc-windows-msvc/release/libdokkoo.lib
+      - name: Upload Dokkoo build artifacts to GitHub
         uses: actions/upload-artifact@v2
         with:
           name: x86_64-dokkoo.win32
-          path: ./target/x86_64-pc-windows-msvc/release/dokkoo.exe
+          path: ./target/x86_64-pc-windows-msvc/release/x86_64-dokkoo.win32.zip
           if-no-files-found: error
